src/index.sass
*:not(i)
  font-family: 'Noto Sans', sans-serif

.font-mono
  font-family: NotoSansMono !important

code
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace


/* Chrome, Safari, Edge, Opera */
.fund-input::-webkit-outer-spin-button,
.fund-input::-webkit-inner-spin-button
  -webkit-appearance: none
  margin: 0


/* Firefox */
.fund-input
  -moz-appearance: textfield


@tailwind base
@tailwind components
@tailwind utilities


body
  margin: 0
  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif; */
  -webkit-font-smoothing: antialiased
  -moz-osx-font-smoothing: grayscale
  @apply bg-gray10

@mixin btn
  @apply ease-out duration-300


#home-nft
  .btn-large
    img
      @apply transition duration-300

  &:hover
    .btn-large
      img
        @apply translate-x-0.5 transition duration-300

.home-footer-social-link
  img
    @apply transition duration-300 transform-gpu

  &:hover
    img
      @apply transition duration-300 transform-gpu
      @apply scale-125


@layer base

  // TYPOGRAPHY

  h1
    @apply text-3xl font-semibold items-center


  h2
    @apply text-2xl font-semibold

  h3
    @apply text-xl font-semibold

  h4
    @apply text-lg font-medium

  .text-gradient-primary
    @apply bg-g-primary bg-clip-text
    -webkit-text-fill-color: transparent

  // FLEX SIZES

  .flex--1
    flex: 1

  .flex-2
    flex: 2

  .flex-3
    flex: 3

  .flex-4
    flex: 4


@layer components

  .card
    @apply rounded-3xl py-7 px-6 bg-gray20 text-white

  .collapse-card
    @apply rounded-2xl py-5 px-6 bg-gray20 text-white

  .collapse-text
    @apply text-sm text-gray100 leading-7

  .collapse-title
    @apply text-sm font-medium text-white leading-7

  .open-collapse
    @apply transition-all duration-500 ease-in-out mb-6 mt-5 max-h-[400px]
    opacity: 1

  .close-collapse
    @apply transition-all duration-500 ease-in-out p-0 m-0 max-h-[4px]
    opacity: 0

  .uni-card
    @apply rounded-2xl after:bg-cover after:content-[''] after:absolute after:inset-0 relative bg-gray20 overflow-hidden
    @apply transition-all duration-250 after:transition-all after:duration-250
    .card-text
      @apply transition duration-300

    &:hover
      //@apply transition-all duration-300

      .widget-icon
        
      //animation-delay: 300ms

      & > .card-text
        @apply -translate-y-1 transition duration-300


  .in-text-link
    @apply underline cursor-pointer hover:text-white transition-all

  .unitap-body
    @apply h-auto pt-16
    min-height: calc(100vh - 65px)

  .content-wrapper
    @apply px-4 sm:px-6 lg:px-8 xl1440:px-60 xl:px-40 py-24 max-w-screen-2xl m-auto


  .gradient-outline-card-light
    @apply bg-g-primary relative z-10 before:content-[''] p-1 rounded-xl overflow-hidden
    @apply before:block before:-z-10 before:absolute before:inset-[2px] before:rounded-lg before:bg-gray00


  .gradient-outline-card
    @apply bg-g-primary relative z-10 before:content-[''] p-1 rounded-2xl overflow-hidden
    @apply before:block before:-z-10 before:absolute before:inset-[3px] before:rounded-xl before:bg-gray00


  .about-section
    @apply mb-6

    &__heading
      @apply flex items-center mb-5

      &__icon
        @apply mr-6

      &__title
        @apply text-white text-2xl font-medium

    &__text
      @apply text-white font-medium text-sm leading-7 mb-4 pl-12 text-justify


  .gradient-outline-card
    @apply bg-g-primary relative z-10 before:content-[''] p-1 rounded-2xl overflow-hidden
    @apply before:block before:-z-10 before:absolute before:inset-[3px] before:rounded-xl before:bg-gray00

  // BUTTON COLOR

  .gradient-outline-button
    @apply bg-g-primary relative z-10 before:content-[''] 
    @apply before:block before:-z-10 before:absolute before:inset-[1px] before:bg-gray00
    //@apply relative

    // todo try to update gradient border method (the current approach is unstable regarding spacing)

    //color: #FFF
    //background: #000
    //background-clip: padding-box
    ///* !importanté */
    //border: solid 5px transparent
    ///* !importanté */
    //border-radius: 1em
    //box-sizing: border-box
    //
    //&:before
    //  content: ''
    //  position: absolute
    //  inset: 0
    //  z-index: -1
    //  margin: -5px
    //  /* !importanté */
    //  border-radius: inherit
    //  /* !importanté */
    //  background: linear-gradient(to right, red, orange)


    button
      @apply bg-g-primary bg-clip-text
      -webkit-text-fill-color: transparent

  .secondary-button
    @apply border-2 border-gray50 bg-gray00
    button
      @apply bg-g-primary bg-clip-text
      -webkit-text-fill-color: transparent

  .green-text-button
    @apply border-2 border-gray50 bg-gray00
    button
      @apply text-space-green


  // BUTTON SIZE
  .btn-default
    button
      @apply text-sm

  .btn-large
    @apply py-2.5 px-4 border-[3px]
    border-radius: 0.75rem !important

    &:before
      border-radius: 0.75rem !important

    button
      @apply font-medium

  .btn-small
    @apply px-3 py-2
    button
      @apply text-xs font-semibold


  // STATUS

  .status-red
    @apply bg-red-100 text-red-500

  .navbar-dropdown__item
    @apply w-52 flex items-center h-11 justify-between bg-gray30 rounded-lg border-2 border-gray40 px-4 mb-2
    &__title
      @apply text-white text-sm font-semibold

    &--active
      @apply bg-gray10 rounded-lg border-2 border-gray100 px-4 mb-2
      &__title
        @apply text-white text-sm font-semibold bg-primaryGradient text-transparent bg-clip-text


//@layer utilities
//  .primary-shadow-xl
//    filter: drop-shadow(0px 8px 18px rgba(81, 88, 246, 0.15))


.countdown-container
  div
    @apply flex justify-center items-center flex-col

  p
    &:first-child
      @apply text-5xl font-bold

    &:last-child
      @apply text-label text-sm font-medium

